Small front fixes
Squashed commit of the following:

* fix(spoiler): markdownify content

* update(releasenote): gallery fix description

* fix(boxes): margin between paragraphs and lists inside box

* revert: make copy button appear on hover

* fix: fixed image box jumping around when switching from and to an image without a description

* add(releasenote)

* fix(code-copy): make copy button appear on hover

* fix(codehtml): change 'python' to 'HTML' in run button sentence

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -40,4 +40,5 @@
     margin-top: -1em;
     text-align: center;
     height: 10%;
+    min-height: 1.5em;
 }
